--- a/index.html
+++ b/index.html
@@ -25,14 +25,107 @@
         <div>
             <div class="nba player 9">
                 <h1>
-                    9 Russell Westbrook Current team Houston Rockets
+                    9 Russell Westbrook Current team Houston Rockets.
                     <img src="houston rockets logo.svg" border="0" alt="rockets logo" height="70" width="100">
                 </h1>
                 <img src="westbrook dunk.gif" border="0" alt="dunking westbrook" width="400" height="500">
                 <img src="westbrook.png" border="0" alt="Russell Westbrook" height="500" width="400">
                 <img src="westbrook happy.gif" border="0" alt="Westbrook Happy" height="500" width="400">
-
             </div>
         </div>
+    <div>
+        <div class="nba player 8">
+            <h1>
+                8 Luka Doncic Current team Dallas Mavericks.
+                <img src="dallas nba logo.png" border="0" alt="Dallas Mavericks Logo" height="70" width="100">
+            </h1>
+            <img src="luka dunk.gif" border="0" height="300" width="300" alt="Luka Dunk">
+            <img src="luka.jpg" alt="luka" border="0" width="500" height="350">
+            <img src="luka stepback.gif" alt="Luka stepback" border="0" width="450" height="300">
+        </div>
+    </div>
+
+    <div>
+        <div class="nba player 7">
+            <h1>
+                7 Anthony Davis Current team Los Angeles Lakers
+                <img src="los angeles.jpg" alt="lakers logo" border="0" height="100" width="100">
+            </h1>
+            <img src="AD dunk.gif" alt="Davis dunk" border="0" width="400" height="300">
+            <img src="AD holding a ball.png" alt="Davis ball" border="0" width="450" height="350">
+            <img src="AD shows off.gif" alt="Davis Dunk" border="0" width="400" height="300">
+        </div>
+    </div>
+
+    <div>
+        <div class="nba player 6">
+             <h1>
+               6 James Harden Current team Houston Rockets.
+                <img src="houston rockets logo.svg" border="0" alt="rockets logo" height="70" width="100">
+            </h1>
+            <img src="harden stepback.gif" alt="harden stepback" border="0" height="300" width="500">
+            <img src="Harden.jpg" alt="Harden" height="300" width="500" border="0">
+            <img src="hardendunk.gif" alt="harden dunk" border="0" width="500" height="300">
+        </div>
+
+        </div>
+    <div>
+        <div class="nba player 5">
+            <h1>
+            5 Stephen Curry Current Team Golden State Warriors.
+            <img src="warriors.png" alt="nba warriors logo" border="0" height="80" width="110">
+            </h1>
+            <img src="curry shot.gif" alt="curry" border="0" width="300" height="400">
+            <img src="curry.jpg" alt="curry" border="0" width="350" height="450">
+            <img src="curry123.gif" alt="curry" border="0" width="300" height="400">
+        </div>
+    </div>
+
+    <div>
+        <div class="nba player 4">
+            <h1>
+                4 Kevin Durant Current Team Brooklyn Nets.
+                <img src="brookyln nets logo.jpg" border="0" alt="nba logo" width="50" height="50">
+            </h1>
+            <img src="kevin dunk.gif" alt="kevin dunk" border="0" width="300" height="400">
+            <img src="kevin durant.jpg" alt="kevin" border="0" width="350" height="450">
+            <img src="kevin mad.gif" alt="kevin dunk" border="0" width="300" height="400">
+        </div>
+    </div>
+    <div>
+        <div class="nba player 3">
+            <h1>
+                3 Kawhi Leonard Current Team Los Angeles Clippers.
+                <img src="clippers logo.png" border="0" alt="clippers logo" width="50" height="50">
+            </h1>
+            <img src="kawhidunk.gif" alt="kawhi dunk" border="0" width="300" height="400">
+            <img src="kawhi.jpg" alt="kawhi" border="0" width="350" height="450">
+            <img src="kawhidunk2.gif" alt="kawhi dunk" border="0" width="300" height="400">
+
+        </div>
+    </div>
+    <div>
+        <div class="nba player 2">
+            <h1>
+                2 Lebron James Current Team Los Angeles Lakers.
+                <img src="los angeles.jpg" alt="lakers logo" border="0" height="100" width="100">
+            </h1>
+            <img src="lebron intro.gif" alt="lebron intro" border="0" width="300" height="400">
+            <img src="lebron.jpg" alt="lebron james" border="0" width="300" height="400">
+            <img src="lebronblock.gif" alt="lebron epic block" border="0" width="300" height="400">
+        </div>
+    </div>
+
+    <div>
+        <div class="nba player 1">
+            <h1>
+                1 Giannis Antetokounmpo Current Team Milwaukee Bucks
+                <img src="bucks logo.png" alt="bucks logo" border="0" height="100" width="100">
+            </h1>
+            <img src="greek freak dunk.gif" alt="giannis dunk" border="0" width="300" height="400">
+            <img src="giannis.jpg" alt="giannis" border="0" width="300" height="400">
+            <img src="greek freak dunk2.gif" alt="giannis dunk" border="0" width="300" height="400">
+        </div>
+    </div>
 </div>
 </html>
