--- a/index.html
+++ b/index.html
@@ -17,8 +17,25 @@
             <img src="brookyln nets logo.jpg" border="0" alt="nba logo" width="50" height="50">
         </h1>
                 <img src="kryie shooting.gif" border="0" alt="shooting kyrie" width="300" height="400">
-                                <img src="kyrie.jpg" border="0" alt="kyrie" width="400" height="500">
+                <img src="kyrie.jpg" border="0" alt="kyrie" width="400" height="500">
                 <img src="kyrie finish.gif" border="0" alt="kyrie" width="400" height="500">
+            </div>
+            <p>
+               Kyrie Irving is a 6'2 guard 27 years old he is the best dribbler right now probably one of the best of all time. Before
+                Kyrie got hurt he was averaging 27.4 PPG with 6.4 APG. Kyrie on some nights will drop 40 points even 50 points,
+                but he lacks on defence. Also is a bad team he ball hogs a lot and makes his team mates look bad too. it was difficult
+                to put either Damian Lillard or Kyrie Irving in the top ten.
+            </p>
+            <div>
+                <div class="important other information">
+                    <h2>important other Information</h2>
+                    <ul>
+                        <li>Played 9 seasons Went to playoffs 4 times</li>
+                        <li>6 time All star</li>
+                        <li>1 time All star MVP</li>
+                        <li>Won Rookie of the year</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
@@ -33,6 +50,26 @@
                 <img src="westbrook happy.gif" border="0" alt="Westbrook Happy" height="500" width="400">
             </div>
         </div>
+        <p>
+            Russell Westbrook is 31 years old he is 6'3 and this man was basically a walking triple Double. Russell Westbrook
+            averages 27.4 PPG 8.0 RPG and 7.1 APG he is an excellent finisher at the rim for his height but lacks in shooting.
+            some nights his jumpshot is wet others can't go in at all. Also lacks to lead his team in the playoffs because their is
+            some nights where, he doesn't care about winning but cares for getting a triple double. If he makes his jumpshot more constantly
+            and change his ways, of playing basketball he can definitely be in the top 5.
+        </p>
+            <div>
+                <div class="important other information">
+                    <h2>important other Information</h2>
+                    <ul>
+                        <li>Played 12 seasons Went to playoffs 9 times</li>
+                        <li>9 time All star</li>
+                        <li>2 time All star MVP</li>
+                        <li>2016 season MVP</li>
+                        <li>2 time scoring leader</li>
+                        <li>2 time assists leader </li>
+                    </ul>
+                </div>
+            </div>
     <div>
         <div class="nba player 8">
             <h1>
@@ -44,6 +81,23 @@
             <img src="luka stepback.gif" alt="Luka stepback" border="0" width="450" height="300">
         </div>
     </div>
+    <p>
+        Luka Doncic is putting up 29.0 PPG 9.5 RPG and 8.8 APG he is only 21 years old playing guard at 6'7. Even though he hasn't
+        been in the league for long, putting up those numbers are still impressive especially at that age. luka Doncic is not that good
+        of a shooter but still can shoot from range Nba players still respect his shots, he is good at finishing at the rim
+        it is hard to block him since he is tall. Luka Doncic still need to work on his shot, but if the game is on the line
+        he is the man that you will goto.
+    </p>
+     <div>
+                <div class="important other information">
+                    <h2>important other Information</h2>
+                    <ul>
+                        <li>Played 2 seasons</li>
+                        <li>1 time All star</li>
+                        <li>Won Rookie of the year</li>
+                    </ul>
+                </div>
+            </div>
 
     <div>
         <div class="nba player 7">
@@ -55,7 +109,26 @@
             <img src="AD holding a ball.png" alt="Davis ball" border="0" width="450" height="350">
             <img src="AD shows off.gif" alt="Davis Dunk" border="0" width="400" height="300">
         </div>
+        <p>
+            Anthony Davis is 27 years old 6'11 and he been improving every year he is averaging 26.4 PPG 9.4 RPG and 3.2 APG.
+            if keeps doing this for a couple more years he will be in the Hall Of Fame, also he is one of the best Big men
+            in the Nba. Even if he doesn't have much experience in the Nba playoffs he is playing with Lebron James, helping the
+            Los Angeles Lakers. Davis have been taken care of his body so hopefully he will play in the playoffs without getting hurt.
+        </p>
+        <div>
+            <div class="important other information">
+                <h2>Important other Information</h2>
+                <ul>
+                    <li>Played 8 Nba seasons went to playoffs 2 times</li>
+                    <li>7 time All Star played 6 times</li>
+                    <li>1 time All star MVP</li>
+                    <li>3 time block leader</li>
+                </ul>
+            </div>
+        </div>
+
     </div>
+
 
     <div>
         <div class="nba player 6">
@@ -67,9 +140,30 @@
             <img src="Harden.jpg" alt="Harden" height="300" width="500" border="0">
             <img src="hardendunk.gif" alt="harden dunk" border="0" width="500" height="300">
         </div>
-
+        <p>
+            James Harden is 30 years old putting up 34.3 PPG 6.4 RPG and 7.5 APG at 6'4. James Harden may be the best offensive
+            player of all time, he finds new ways how to get open and be creative to get to the basket. James Harden isn't known
+            for defense at all only offence. James Harden has one of the Hardest step-back to guard his step-back creates
+            so much space to shoot, when he does it there is a good chance that he will get foul especially at the 3 pointer. The
+            thinking ability of scoring 40, 50 or even 60 points with a triple double is ridiculous. if he could only play defense
+            he could easily be top 3.
+        </p>
+        <div>
+            <div class="important other information">
+                <h2>
+                    Important Other Information
+                </h2>
+                <ul>
+                    <li>Played 11 seasons went to playoffs 10 times</li>
+                    <li>8 time All star</li>
+                    <li>1 time season MVP</li>
+                    <li>1 time Six man of the year</li>
+                    <li>2 time scorer leader</li>
+                    <li>1 time Assists leader</li>
+                </ul>
+            </div>
         </div>
-    <div>
+
         <div class="nba player 5">
             <h1>
             5 Stephen Curry Current Team Golden State Warriors.
@@ -78,6 +172,27 @@
             <img src="curry shot.gif" alt="curry" border="0" width="300" height="400">
             <img src="curry.jpg" alt="curry" border="0" width="350" height="450">
             <img src="curry123.gif" alt="curry" border="0" width="300" height="400">
+        </div>
+        <p>
+           Before Stephen curry broke his hand not able to play for the rest of the season. Curry had 20.8 PPG
+            5.2 RPG and 6.6 APG, Curry is 32 years old and definitely one of the best shooters of all time Curry can shoot from anywhere on the court
+            constantly and can shoot very far too. Curry shot is fast and very hard to guard, you must at all times can't give room
+            Curry to shoot, if you give him any kind of openness he will make it all day. He will shoot it in your face and make it over you as well.
+            Curry have lots of sets plays with his team to get open since Nba players gives him Barely any room to dribble.
+        </p>
+        <div>
+            <div class="important other information">
+                <h2>important other information</h2>
+                <ul>
+                    <li>Played 11 seasons went to playoffs 7 times</li>
+                    <li>3 time nba champion </li>
+                    <li>6 time All star</li>
+                    <li>2 time season MVP</li>
+                    <li>1 time scoring leader</li>
+                    <li>1 time steals leader</li>
+
+                </ul>
+            </div>
         </div>
     </div>
 
