--- a/index.html
+++ b/index.html
@@ -207,6 +207,29 @@
             <img src="kevin mad.gif" alt="kevin dunk" border="0" width="300" height="400">
         </div>
     </div>
+    <p>
+        Even though Kevin Durant didn't play this season cause of an injury. He is still a top 5 player Kevin Durant was putting
+        up last season 26.0 PPG 6.4 RPG and 5.9 APG, he is 6'10 Small Forward and lengthy Kevin Durant is able to play all 5 Positions.
+        He can finish at the rim shoot from deep and make it constantly also has great inside and perimeter defense. but lacks on size and
+        strength, if you have strength and size you will be able to push and bully Kevin Durant around.
+    </p>
+    <div>
+        <div class="important other information">
+            <h2>
+                Important other Information
+            </h2>
+            <ul>
+                <li>Played 12 seasons went to playoffs 9 times</li>
+                <li>2 time nba champion</li>
+                <li>10 time All star</li>
+                <li>2 time All star MVP</li>
+                <li>won Rookie of the year</li>
+                <li>1 Season MVP</li>
+                <li>4 time scoring Leader</li>
+                <li>2 time Finals MVP</li>
+            </ul>
+        </div>
+    </div>
     <div>
         <div class="nba player 3">
             <h1>
@@ -218,7 +241,30 @@
             <img src="kawhidunk2.gif" alt="kawhi dunk" border="0" width="300" height="400">
 
         </div>
+        <p>
+            Kawhi leonard is 29 years old 6'7 forward he is putting up 26.9 PPG 7.2 RPG and 4.9 APG. Kawhi is the best
+            lockdown defender in the league probably one of the best of all time. if you expect to drop 20 or 30 on Kawhi easy
+            think again. Kawhi isn't scared to guard anyone you can be 7 feet he will guard you, if you 6'2 thinking you will
+            blow by him easy think again. Kawhi have a long wingspan for his height and have fast feet, Kawhi isn't much of a talker
+            on the court. But one thing for sure if Kawhi is guarding you he will make scoring a basket feel physically impossible.
+        </p>
     </div>
+        <div>
+            <div class="Important other information">
+            <h2>
+                Important other Information
+            </h2>
+                <ul>
+                    <li>Played 9 seasons went to playoffs 7 times</li>
+                    <li>2 time nba champion</li>
+                    <li>4 time all star</li>
+                    <li>1 time all star MVP</li>
+                    <li>2 time Finals MVP</li>
+                    <li>1 time steal leader</li>
+                    <li>2 time defensive player of the year</li>
+                </ul>
+            </div>
+        </div>
     <div>
         <div class="nba player 2">
             <h1>
@@ -228,6 +274,30 @@
             <img src="lebron intro.gif" alt="lebron intro" border="0" width="300" height="400">
             <img src="lebron.jpg" alt="lebron james" border="0" width="300" height="400">
             <img src="lebronblock.gif" alt="lebron epic block" border="0" width="300" height="400">
+        </div>
+        <p>
+            Lebron james is 35 years old putting up 25.3 PPG 8.0 RPG and 10.3 APG that age is really impressive. Lebron has
+            high IQ and passing verion when he drives he see a open team already. lebron always wants him team mates involve
+            in the offence and makes his team mates better. lebron is still a excellent finisher and slasher at the rim, with his
+            unstopped signature 3 point shot. lebron still have good defense but it gets worst when he gets older, he can be consider
+            the best nba right now and all time. there won't be a another nba player even close to him he has taken care of his body for more
+            than 12 years, hasn't gotten any seriously injury and putting up good numbers at a old age.
+        </p>
+        <div>
+            <div class="Important other information">
+                <h2>
+                    Important other information
+                </h2>
+                <ul>
+                    <li>Played 17 seasons went to playoffs 13 times</li>
+                    <li>3 time nba champion</li>
+                    <li>16 time all star</li>
+                    <li>3 time all star MVP</li>
+                    <li>4 time season MVP</li>
+                    <li>3 time finals MVP</li>
+                    <li>1 time scoring leader</li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -242,5 +312,27 @@
             <img src="greek freak dunk2.gif" alt="giannis dunk" border="0" width="300" height="400">
         </div>
     </div>
+        <div>
+            <p>
+            It was hard to put Giannis or lebron at first. Giannis Antetokounmpo is a walking bucket at age 25 he puts up 29.7 PPG
+                13.7 RPG and 5.8 APG at 6'11 and lengthy. Giannis is the hardest play to stop, 1 he is very tall and plays small
+                forward 2, he is fast for that height and, 3 when he does layups or dunks he covers so much ground. As soon he blows you
+                to go in the paint you are not stopping him. Giannis have strength muscle and size Nba players have to double team or some
+                times triple team when he goes in the paint. if you are in the paint don't even try to block his shot take a charge instead. Giannis
+                has great inside and Perimeter defense. Even though he lacks on his jumpshot it gets better every year and giannis improves all around ever year. All
+                Giannis needs is a constantly jumpshot and he will definitely be the best nba player and probably be in the 10 of all time.
+            </p>
+            <div>
+                <div class="important other Information">
+                    <ul>
+                        <li>played 7 seasons went to playoffs 4 times</li>
+                        <li>4 time All star</li>
+                        <li>1 most improve player</li>
+                        <li>1 season MVP</li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
 </div>
 </html>
