--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
+<head>
+<link href="Nba style.css" type="text/css" rel="stylesheet">
+</head>
 
 <div class="reading">
     <div class="before we start">
          <header>
              Hi before you start reading this is opinion base this is only current Nba players not base on stats only. This
              list is being injury free it means that if a player got hurt and didn't play this season, but he was A top
-             ten player I will still add him.
+             ten player I will still add him. These states were base on Espn 8/8/2020
          </header>
 
 
@@ -14,21 +17,21 @@
             <div>
         <h1>
             10 kyrie irving Current team Brooklyn Nets.
-            <img src="brookyln nets logo.jpg" border="0" alt="nba logo" width="50" height="50">
+            <img src="brookyln nets logo.jpg" border="0" alt="nba logo" width="70" height="70" align="middle">
         </h1>
-                <img src="kryie shooting.gif" border="0" alt="shooting kyrie" width="300" height="400">
-                <img src="kyrie.jpg" border="0" alt="kyrie" width="400" height="500">
-                <img src="kyrie finish.gif" border="0" alt="kyrie" width="400" height="500">
+                <img src="kryie shooting.gif" border="0" alt="shooting kyrie" width="300" height=500 align="left">
+                <img src="kyrie.jpg" border="0" alt="kyrie" width="675" height="500" align="middle">
+                <img src="kyrie finish.gif" border="0" alt="kyrie" width="350" height="500" align="right">
             </div>
             <p>
                Kyrie Irving is a 6'2 guard 27 years old he is the best dribbler right now probably one of the best of all time. Before
                 Kyrie got hurt he was averaging 27.4 PPG with 6.4 APG. Kyrie on some nights will drop 40 points even 50 points,
-                but he lacks on defence. Also is a bad team he ball hogs a lot and makes his team mates look bad too. it was difficult
+                but he lacks on defence. Also is a bad team mate he ball hogs a lot and makes his team mates look bad too. it was difficult
                 to put either Damian Lillard or Kyrie Irving in the top ten.
             </p>
             <div>
                 <div class="important other information">
-                    <h2>important other Information</h2>
+                    <h2>Important other Information</h2>
                     <ul>
                         <li>Played 9 seasons Went to playoffs 4 times</li>
                         <li>6 time All star</li>
@@ -43,23 +46,23 @@
             <div class="nba player 9">
                 <h1>
                     9 Russell Westbrook Current team Houston Rockets.
-                    <img src="houston rockets logo.svg" border="0" alt="rockets logo" height="70" width="100">
+                    <img src="houston rockets logo.svg" border="0" alt="rockets logo" height="150" width="150" align="middle">
                 </h1>
-                <img src="westbrook dunk.gif" border="0" alt="dunking westbrook" width="400" height="500">
-                <img src="westbrook.png" border="0" alt="Russell Westbrook" height="500" width="400">
-                <img src="westbrook happy.gif" border="0" alt="Westbrook Happy" height="500" width="400">
+                <img src="westbrook dunk.gif" border="0" alt="dunking westbrook" width="300" height="500" align="left">
+                <img src="westbrook.png" border="0" alt="Russell Westbrook" height="500" width="675" align="middle">
+                <img src="westbrook happy.gif" border="0" alt="Westbrook Happy" height="500" width="350" align="right">
             </div>
         </div>
         <p>
             Russell Westbrook is 31 years old he is 6'3 and this man was basically a walking triple Double. Russell Westbrook
             averages 27.4 PPG 8.0 RPG and 7.1 APG he is an excellent finisher at the rim for his height but lacks in shooting.
-            some nights his jumpshot is wet others can't go in at all. Also lacks to lead his team in the playoffs because their is
+            Some nights his jumpshot is wet others can't go in at all. Also lacks to lead his team in the playoffs because their is
             some nights where, he doesn't care about winning but cares for getting a triple double. If he makes his jumpshot more constantly
             and change his ways, of playing basketball he can definitely be in the top 5.
         </p>
             <div>
                 <div class="important other information">
-                    <h2>important other Information</h2>
+                    <h2>Important other Information</h2>
                     <ul>
                         <li>Played 12 seasons Went to playoffs 9 times</li>
                         <li>9 time All star</li>
@@ -74,11 +77,11 @@
         <div class="nba player 8">
             <h1>
                 8 Luka Doncic Current team Dallas Mavericks.
-                <img src="dallas nba logo.png" border="0" alt="Dallas Mavericks Logo" height="70" width="100">
+                <img src="dallas nba logo.png" border="0" alt="Dallas Mavericks Logo" height="70" width="100" align="middle">
             </h1>
-            <img src="luka dunk.gif" border="0" height="300" width="300" alt="Luka Dunk">
-            <img src="luka.jpg" alt="luka" border="0" width="500" height="350">
-            <img src="luka stepback.gif" alt="Luka stepback" border="0" width="450" height="300">
+            <img src="luka dunk.gif" border="0" width="300" height=500 align="left" alt="Luka Dunk">
+            <img src="luka.jpg" alt="luka" border="0" width="675" height="500" align="middle">
+            <img src="luka stepback.gif" alt="Luka stepback" border="0" height="500" width="350" align="right">
         </div>
     </div>
     <p>
@@ -90,7 +93,7 @@
     </p>
      <div>
                 <div class="important other information">
-                    <h2>important other Information</h2>
+                    <h2>Important other Information</h2>
                     <ul>
                         <li>Played 2 seasons</li>
                         <li>1 time All star</li>
@@ -103,15 +106,15 @@
         <div class="nba player 7">
             <h1>
                 7 Anthony Davis Current team Los Angeles Lakers
-                <img src="los angeles.jpg" alt="lakers logo" border="0" height="100" width="100">
+                <img src="los angeles.jpg" alt="lakers logo" border="0" height="150" width="200" align="middle" >
             </h1>
-            <img src="AD dunk.gif" alt="Davis dunk" border="0" width="400" height="300">
-            <img src="AD holding a ball.png" alt="Davis ball" border="0" width="450" height="350">
-            <img src="AD shows off.gif" alt="Davis Dunk" border="0" width="400" height="300">
+            <img src="AD dunk.gif" alt="Davis dunk" border="0" width="300" height=500 align="left">
+            <img src="AD holding a ball.png" alt="Davis ball" border="0" width="675" height="500" align="middle">
+            <img src="AD shows off.gif" alt="Davis Dunk" border="0" width="350" height="500" align="right">
         </div>
         <p>
             Anthony Davis is 27 years old 6'11 and he been improving every year he is averaging 26.4 PPG 9.4 RPG and 3.2 APG.
-            if keeps doing this for a couple more years he will be in the Hall Of Fame, also he is one of the best Big men
+            If keeps doing this for a couple more years he will be in the Hall Of Fame, also he is one of the best Big men
             in the Nba. Even if he doesn't have much experience in the Nba playoffs he is playing with Lebron James, helping the
             Los Angeles Lakers. Davis have been taken care of his body so hopefully he will play in the playoffs without getting hurt.
         </p>
@@ -134,11 +137,11 @@
         <div class="nba player 6">
              <h1>
                6 James Harden Current team Houston Rockets.
-                <img src="houston rockets logo.svg" border="0" alt="rockets logo" height="70" width="100">
+                <img src="houston rockets logo.svg" border="0" alt="rockets logo" height="150" width="150" align="middle">
             </h1>
-            <img src="harden stepback.gif" alt="harden stepback" border="0" height="300" width="500">
-            <img src="Harden.jpg" alt="Harden" height="300" width="500" border="0">
-            <img src="hardendunk.gif" alt="harden dunk" border="0" width="500" height="300">
+            <img src="harden stepback.gif" alt="harden stepback" border="0" height="500" width="300" align="left">
+            <img src="Harden.jpg" alt="Harden" height="500" width="675" border="0" align="middle">
+            <img src="hardendunk.gif" alt="harden dunk" border="0" width="350" height="500" align="right">
         </div>
         <p>
             James Harden is 30 years old putting up 34.3 PPG 6.4 RPG and 7.5 APG at 6'4. James Harden may be the best offensive
@@ -167,22 +170,22 @@
         <div class="nba player 5">
             <h1>
             5 Stephen Curry Current Team Golden State Warriors.
-            <img src="warriors.png" alt="nba warriors logo" border="0" height="80" width="110">
+            <img src="warriors.png" alt="nba warriors logo" border="0" height="80" width="110" align="middle">
             </h1>
-            <img src="curry shot.gif" alt="curry" border="0" width="300" height="400">
-            <img src="curry.jpg" alt="curry" border="0" width="350" height="450">
-            <img src="curry123.gif" alt="curry" border="0" width="300" height="400">
+            <img src="curry shot.gif" alt="curry" border="0" width="300" height="500" align="left">
+            <img src="curry.jpg" alt="curry" border="0" width="675" height="500" align="middle">
+            <img src="curry123.gif" alt="curry" border="0" width="350" height="500" align="right">
         </div>
         <p>
-           Before Stephen curry broke his hand not able to play for the rest of the season. Curry had 20.8 PPG
+           Before Stephen Curry broke his hand not able to play for the rest of the season. Curry had 20.8 PPG
             5.2 RPG and 6.6 APG, Curry is 32 years old and definitely one of the best shooters of all time Curry can shoot from anywhere on the court
-            constantly and can shoot very far too. Curry shot is fast and very hard to guard, you must at all times can't give room
+            constantly and can shoot very far from the 3 point line. Curry shot is fast and very hard to guard, you must at all times can't give room
             Curry to shoot, if you give him any kind of openness he will make it all day. He will shoot it in your face and make it over you as well.
-            Curry have lots of sets plays with his team to get open since Nba players gives him Barely any room to dribble.
+            Curry have lots of sets plays with his team to get open since Nba players gives him barely any room to dribble.
         </p>
         <div>
             <div class="important other information">
-                <h2>important other information</h2>
+                <h2>Important other Information</h2>
                 <ul>
                     <li>Played 11 seasons went to playoffs 7 times</li>
                     <li>3 time nba champion </li>
@@ -200,11 +203,11 @@
         <div class="nba player 4">
             <h1>
                 4 Kevin Durant Current Team Brooklyn Nets.
-                <img src="brookyln nets logo.jpg" border="0" alt="nba logo" width="50" height="50">
+            <img src="brookyln nets logo.jpg" border="0" alt="nba logo" width="70" height="70" align="middle">
             </h1>
-            <img src="kevin dunk.gif" alt="kevin dunk" border="0" width="300" height="400">
-            <img src="kevin durant.jpg" alt="kevin" border="0" width="350" height="450">
-            <img src="kevin mad.gif" alt="kevin dunk" border="0" width="300" height="400">
+            <img src="kevin dunk.gif" alt="kevin dunk" border="0" width="300" height="500" align="left">
+            <img src="kevin durant.jpg" alt="kevin" border="0" width="675" height="500" align="middle">
+            <img src="kevin mad.gif" alt="kevin dunk" border="0" width="350" height="500" align="right">
         </div>
     </div>
     <p>
@@ -234,11 +237,11 @@
         <div class="nba player 3">
             <h1>
                 3 Kawhi Leonard Current Team Los Angeles Clippers.
-                <img src="clippers logo.png" border="0" alt="clippers logo" width="50" height="50">
+                <img src="clippers logo.png" border="0" alt="clippers logo" width="150" height="100" align="middle">
             </h1>
-            <img src="kawhidunk.gif" alt="kawhi dunk" border="0" width="300" height="400">
-            <img src="kawhi.jpg" alt="kawhi" border="0" width="350" height="450">
-            <img src="kawhidunk2.gif" alt="kawhi dunk" border="0" width="300" height="400">
+            <img src="kawhidunk.gif" alt="kawhi dunk" border="0" width="300" height="500" align="left">
+            <img src="kawhi.jpg" alt="kawhi" border="0" width="675" height="500" align="middle">
+            <img src="kawhidunk2.gif" alt="kawhi dunk" border="0" width="350" height="500" align="right">
 
         </div>
         <p>
@@ -269,11 +272,11 @@
         <div class="nba player 2">
             <h1>
                 2 Lebron James Current Team Los Angeles Lakers.
-                <img src="los angeles.jpg" alt="lakers logo" border="0" height="100" width="100">
+                <img src="los angeles.jpg" alt="lakers logo" border="0" height="150" width="200" align="middle" >
             </h1>
-            <img src="lebron intro.gif" alt="lebron intro" border="0" width="300" height="400">
-            <img src="lebron.jpg" alt="lebron james" border="0" width="300" height="400">
-            <img src="lebronblock.gif" alt="lebron epic block" border="0" width="300" height="400">
+            <img src="lebron intro.gif" alt="lebron intro" border="0" width="300" height=500 align="left">
+            <img src="lebron.jpg" alt="lebron james" border="0" width="675" height="500" align="middle">
+            <img src="lebronblock.gif" alt="lebron epic block" border="0" width="350" height="500" align="right">
         </div>
         <p>
             Lebron james is 35 years old putting up 25.3 PPG 8.0 RPG and 10.3 APG that age is really impressive. Lebron has
@@ -307,9 +310,9 @@
                 1 Giannis Antetokounmpo Current Team Milwaukee Bucks
                 <img src="bucks logo.png" alt="bucks logo" border="0" height="100" width="100">
             </h1>
-            <img src="greek freak dunk.gif" alt="giannis dunk" border="0" width="300" height="400">
-            <img src="giannis.jpg" alt="giannis" border="0" width="300" height="400">
-            <img src="greek freak dunk2.gif" alt="giannis dunk" border="0" width="300" height="400">
+            <img src="greek freak dunk.gif" alt="giannis dunk" border="0" width="300" height=500 align="left">
+            <img src="giannis.jpg" alt="giannis" border="0" width="675" height="500" align="middle">
+            <img src="greek freak dunk2.gif" alt="giannis dunk" border="0" width="350" height="500" align="right">
         </div>
     </div>
         <div>
@@ -319,16 +322,19 @@
                 forward 2, he is fast for that height and, 3 when he does layups or dunks he covers so much ground. As soon he blows you
                 to go in the paint you are not stopping him. Giannis have strength muscle and size Nba players have to double team or some
                 times triple team when he goes in the paint. if you are in the paint don't even try to block his shot take a charge instead. Giannis
-                has great inside and Perimeter defense. Even though he lacks on his jumpshot it gets better every year and giannis improves all around ever year. All
-                Giannis needs is a constantly jumpshot and he will definitely be the best nba player and probably be in the 10 of all time.
+                has great inside and Perimeter defense. Even though he lacks on his jumpshot it gets better every year and Giannis improves all around ever year. All
+                Giannis needs is a constantly jumpshot and he will definitely be the best nba player, and probably be in the top 10 of all time.
             </p>
             <div>
                 <div class="important other Information">
+                    <h2>
+                        Important other information
+                    </h2>
                     <ul>
                         <li>played 7 seasons went to playoffs 4 times</li>
                         <li>4 time All star</li>
-                        <li>1 most improve player</li>
-                        <li>1 season MVP</li>
+                        <li>1 time most improve player</li>
+                        <li>1 time season MVP</li>
                     </ul>
                 </div>
             </div>
