--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
          <header>
              Hi before you start reading this is opinion base this is only current Nba players not base on stats only. This
              list is being injury free it means that if a player got hurt and didn't play this season, but he was A top
-             ten player I will still add him. These states were base on Espn 8/8/2020
+             ten player I will still add him. These stats were base on Espn 8/8/2020
          </header>
 
 
